--- a/src/ui/compose/ComposePage.css
+++ b/src/ui/compose/ComposePage.css
@@ -33,7 +33,7 @@
 }
 
 .composer .input-resettable BUTTON:hover {
-    color: var(--red);
+    color: var(--bs-red);
 }
 
 .composer .text-editable {
