--- a/src/ui/control/EmojiListDialog.css
+++ b/src/ui/control/EmojiListDialog.css
@@ -1,7 +1,7 @@
 .emoji-list-dialog .help {
-    color: var(--gray);
+    color: var(--bs-gray);
 }
 
 .emoji-list-dialog .help .marker {
-    color: var(--primary);
+    color: var(--bs-primary);
 }
