--- a/src/ui/instant/InstantBell.css
+++ b/src/ui/instant/InstantBell.css
@@ -6,7 +6,7 @@
     position: absolute;
     top: -0.2rem;
     right: 0;
-    background-color: var(--danger);
+    background-color: var(--bs-danger);
     color: white;
     font-weight: bold;
     font-size: 0.7rem;
