--- a/src/ui/control/NameSelector.css
+++ b/src/ui/control/NameSelector.css
@@ -12,7 +12,7 @@
 }
 
 .name-select .item.selected, .name-select .item.selected:hover {
-    background-color: var(--primary);
+    background-color: var(--bs-primary);
     color: white;
 }
 
