--- a/src/ui/mainmenu/connectionstatus/NewsButton.css
+++ b/src/ui/mainmenu/connectionstatus/NewsButton.css
@@ -6,7 +6,7 @@
     position: absolute;
     top: -.2rem;
     right: 0;
-    background-color: var(--primary);
+    background-color: var(--bs-primary);
     color: white;
     font-weight: bold;
     font-size: .7rem;
