--- a/src/ui/posting/PostingSources.css
+++ b/src/ui/posting/PostingSources.css
@@ -1,14 +1,14 @@
 .posting-sources .title {
     font-size: smaller;
     font-weight: bold;
-    border-bottom: solid 1px var(--gray-dark);
-    color: var(--gray-dark);
+    border-bottom: solid 1px var(--bs-gray-dark);
+    color: var(--bs-gray-dark);
     margin-bottom: .3em;
 }
 
 .posting-sources .source {
     padding: .3em 1em .3em .2em;
-    color: var(--primary);
+    color: var(--bs-primary);
 }
 
 .posting-sources .source:hover {
@@ -22,9 +22,9 @@
 .posting-sources .source .icon {
     display: inline-block;
     width: 1.7em;
-    color: var(--gray);
+    color: var(--bs-gray);
 }
 
 .posting-sources .source .icon.original {
-    color: var(--green);
+    color: var(--bs-green);
 }
