--- a/src/ui/profile/edit/AvatarSelector.css
+++ b/src/ui/profile/edit/AvatarSelector.css
@@ -34,7 +34,7 @@
 }
 
 .avatar-selector .item.active, .avatar-selector .item.active:hover {
-    background-color: var(--cyan);
+    background-color: var(--bs-cyan);
     cursor: default;
 }
 
@@ -42,7 +42,7 @@
     position: absolute;
     right: 0;
     top: 0;
-    color: var(--danger);
+    color: var(--bs-danger);
     font-size: 1.5em;
     height: 1em;
     width: 1em;
