--- a/src/ui/profile/view/ProfileView.css
+++ b/src/ui/profile/view/ProfileView.css
@@ -7,6 +7,10 @@
     margin-top: 1rem;
 }
 
+.profile-view A:hover {
+    text-decoration: underline;
+}
+
 @media only screen and (max-width: 575px) {
     .profile-view {
         border-left-width: 0;
