Fixed size of image thumbnails in RichTextEditorDropzone.

--- a/src/ui/control/richtexteditor/RichTextEditorDropzone.css
+++ b/src/ui/control/richtexteditor/RichTextEditorDropzone.css
@@ -22,3 +22,10 @@
     padding: .25rem;
     position: relative;
 }
+
+.rich-text-editor-dropzone .uploaded-image IMG {
+    width: 99px;
+    height: 99px;
+    object-fit: cover;
+    object-position: center;
+}
