No underlining when hovering <OwnerName>.

--- a/src/ui/mainmenu/owner/OwnerName.css
+++ b/src/ui/mainmenu/owner/OwnerName.css
@@ -21,6 +21,10 @@
     color: white;
 }
 
+#owner-name .node-name:hover {
+    text-decoration: none;
+}
+
 #owner-name .node-name.correct {
     color: var(--correct-light);
 }
