--- a/src/ui/posting/PostingGallery.css
+++ b/src/ui/posting/PostingGallery.css
@@ -80,19 +80,19 @@
 
 @media only screen and (min-width: 576px) {
     .posting .gallery.single {
-        max-height: 750px;
+        height: min(750px, var(--image-height));
     }
 }
 
 @media only screen and (max-width: 575px) {
     .posting .gallery.single.horizontal {
-        height: 75vw;
+        height: min(75vw, var(--image-height));
     }
 }
 
 @media only screen and (max-width: 575px) {
     .posting .gallery.single.vertical {
-        height: 125vw;
+        height: min(125vw, var(--image-height));
     }
 }
 
