Style for <figcaption>.

--- a/src/ui/posting/Entry.css
+++ b/src/ui/posting/Entry.css
@@ -24,6 +24,12 @@
     height: auto;
 }
 
+.entry > .content FIGCAPTION {
+    font-size: smaller;
+    line-height: 1.2;
+    margin-top: .3em;
+}
+
 .entry.single-emoji .content .emoji {
     font-size: 3em;
 }
