--- a/src/ui/comment/Comment.css
+++ b/src/ui/comment/Comment.css
@@ -49,8 +49,8 @@
 }
 
 .comment .content IMG, .comment .content IFRAME {
-    max-width: min(100vw - 7rem, var(--feed-width) - 6.5rem);
-    max-height: 16rem;
+    max-width: min(100vw - 7rem, var(--feed-width) - 6.5rem, var(--width, 100vw));
+    max-height: min(16rem, var(--height, 200vh));
 }
 
 .comment .content .read-more {
