Do not underline "Comment" button on hovering.

--- a/src/ui/posting/PostingButton.css
+++ b/src/ui/posting/PostingButton.css
@@ -16,6 +16,10 @@
     background-color: var(--highlight);
 }
 
+.entry A.posting-button:hover {
+    text-decoration: none;
+}
+
 .posting-button .caption {
     margin-left: .4rem;
     font-weight: 600;
