--- a/src/ui/App.css
+++ b/src/ui/App.css
@@ -1,5 +1,7 @@
 :root:root {
     scroll-behavior: auto;
+    --bs-font-sans-serif: -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans",
+                          sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 HTML {
