--- a/src/ui/page/PageHeader.css
+++ b/src/ui/page/PageHeader.css
@@ -7,7 +7,7 @@
     z-index: 1010;
     box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .14),
                 0 1px 10px 0 rgba(0, 0, 0, .12),
-                0 2px 4px -1px rgba(0, 0, 0, .2)
+                0 2px 4px -1px rgba(0, 0, 0, .2);
 }
 
 #page-header .panel {
