--- a/src/ui/control/richtexteditor/RichTextEditorDropzone.css
+++ b/src/ui/control/richtexteditor/RichTextEditorDropzone.css
@@ -27,3 +27,8 @@
     font-size: smaller;
     vertical-align: text-top;
 }
+
+.rich-text-editor-dropzone .upload INPUT:checked {
+    background-color: var(--bs-info);
+    border-color: var(--bs-info);
+}
