--- a/src/ui/control/richtexteditor/RichTextImageDialogDropzone.css
+++ b/src/ui/control/richtexteditor/RichTextImageDialogDropzone.css
@@ -30,3 +30,8 @@
     font-size: smaller;
     vertical-align: text-top;
 }
+
+.rich-text-image-dialog-dropzone INPUT:checked {
+    background-color: var(--bs-info);
+    border-color: var(--bs-info);
+}
