--- a/src/ui/posting/Posting.css
+++ b/src/ui/posting/Posting.css
@@ -45,6 +45,15 @@
     }
 }
 
+.posting > .content IMG {
+    width: auto;
+    height: auto;
+}
+
+.posting > .content IMG.preload-placeholder {
+    width: var(--width);
+}
+
 .posting > .content IMG, .posting > .content IFRAME {
     max-width: min(100vw - 4rem, var(--feed-width) - 3.5rem, var(--width, 100vw));
     max-height: var(--height, 200vh);
@@ -52,6 +61,12 @@
 
 .posting.preview > .content IMG, .posting.preview > .content IFRAME {
     max-height: min(35rem, var(--height, 200vh));
+}
+
+.posting > .content FIGCAPTION {
+    font-size: smaller;
+    line-height: 1.2;
+    margin-top: .3em;
 }
 
 .posting > .content .read-more {
