Fixed bugs discovered when a new empty node has been initialized.

--- a/src/ui/profile/view/NodeNameView.css
+++ b/src/ui/profile/view/NodeNameView.css
@@ -9,6 +9,8 @@
 
 .node-name-view .menu {
     display: inline;
+    border: 0;
+    background: transparent;
 }
 
 .node-name-view .menu .chevron {
