Better style for FIGCAPTION.

--- a/src/ui/posting/Posting.css
+++ b/src/ui/posting/Posting.css
@@ -64,9 +64,10 @@
 }
 
 .posting > .content FIGCAPTION {
-    font-size: smaller;
     line-height: 1.2;
     margin-top: .3em;
+    color: var(--bs-gray);
+    margin-left: .75em;
 }
 
 .posting > .content .read-more {
