--- a/src/ui/comment/Comment.css
+++ b/src/ui/comment/Comment.css
@@ -63,9 +63,10 @@
 }
 
 .comment .content FIGCAPTION {
-    font-size: smaller;
     line-height: 1.2;
     margin-top: .3em;
+    color: var(--bs-gray);
+    margin-left: .75em;
 }
 
 .comment .content .read-more {
